2009-03-20  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* too_many_files: check for existence of required parameter of some command
  line options before using it. Let all *_Initialise() functions return
  status (FALSE in case something failed).


2009-03-17  Piotr Fusik  <fox@scene.pl>
* colours.c, win32/sound.c: killed MSVC 2008 warnings


2009-03-16  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: fix for Ilusia demo


2009-03-01  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/USAGE, input.c: specify CX85 port
* atari_sdl.c: minor fix for CX85


2009-02-28  Perry McFarlane  <perry_m@fastmail.fm>
* /DOC/USAGE akey.h atari_sdl.c javanvm/atari_javanvm.c input.[ch]: Emulate CX85 numeric keypad


2009-02-25  Perry McFarlane  <perry_m@fastmail.fm>
  Commiting patch submitted by Krótki with my changes <kr0tki@poczta.onet.pl>
* atari.c atari_sdl.c atari_ntsc.[ch] configure.ac platform.h ui.c: NTSC
Filter option in the UI.


2009-02-05  Perry McFarlane  <perry_m@fastmail.fm>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari_sdl.c: cleaned up display modes.


2009-01-11  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari_sdl.c: -audio16 fixed
* pokeysnd.[ch]: Sound recording must stop when POKEY is reinitialised
* sndsave.c: Chunks in WAV format must be word-aligned,
             16-bit sound recording fixed.


2008-12-27  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari.c: initialize color palette after loading saved state
* cfg.c, mzpokeysnd.c, pokeysnd.c, ui.c: serio_sound* -> POKEYSND_serio_sound*


2008-11-03  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: fix syntax error


2008-10-30  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: 5200 GTIA c000-cfff and POKEY e800-efff mirrors.
* configure.ac: minor fix for Cygwin.


2008-10-29  Perry McFarlane  <perry_m@fastmail.fm>